@@ -17,7 +17,7 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.IsIterableContaining.hasItem;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.junit.jupiter.api.Test;
@@ -45,8 +45,7 @@ public class HaIDTests {
 
         assertThat(restore, is(subject));
 
-        HandlerConfiguration haConfig = new HandlerConfiguration(subject.baseTopic,
-                Collections.singletonList(subject.toShortTopic()));
+        HandlerConfiguration haConfig = new HandlerConfiguration(subject.baseTopic, List.of(subject.toShortTopic()));
 
         Collection<HaID> restoreList = HaID.fromConfig(haConfig);
         assertThat(restoreList, hasItem(new HaID("homeassistant/switch/name/config")));
@@ -68,8 +67,7 @@ public class HaIDTests {
 
         assertThat(restore, is(subject));
 
-        HandlerConfiguration haConfig = new HandlerConfiguration(subject.baseTopic,
-                Collections.singletonList(subject.toShortTopic()));
+        HandlerConfiguration haConfig = new HandlerConfiguration(subject.baseTopic, List.of(subject.toShortTopic()));
 
         Collection<HaID> restoreList = HaID.fromConfig(haConfig);
         assertThat(restoreList, hasItem(new HaID("homeassistant/switch/node/name/config")));
